# modules/campaigns/server/controllers/campaignSchedule.server.controller.js
@@ -5,10 +5,12 @@
  */
 var path = require('path'),
   mongoose = require('mongoose'),
-  randomstring = require('randomstring'),
+  crontab = require('node-crontab'),
   _ = require('lodash'),
+  chalk = require('chalk'),
   CampaignSchedule = mongoose.model('CampaignSchedule'),
   scheduler = require('../libs/scheduler.server.lib'),
+  pushNotificationsLib = require(path.resolve('./modules/mobile/server/libs/pushNotifications.server.lib')),
   errorHandler = require(path.resolve('./modules/core/server/controllers/errors.server.controller'));
 
 /**
@@ -19,11 +21,26 @@ exports.save = function (req, res) {
   var campaignSchedule;
   if (req.campaign.deliverySchedule) {
     campaignSchedule = _.extend(req.campaign.deliverySchedule, jsonObj);
+    if (campaignSchedule.jobId) {
+      try {
+        crontab.cancelJob(campaignSchedule.jobId);
+      } catch(e) {
+        console.log(chalk.bold.red('Crontab: job id not found'));
+      }
+    }
   } else {
     campaignSchedule = new CampaignSchedule(jsonObj);
     campaignSchedule.campaign = req.campaign._id;
   }
-  campaignSchedule.nextSend = scheduler.getNextSchedule(campaignSchedule);
+
+  // scheduling job with crontab
+  var jobId;
+  if (campaignSchedule.frequency === 'immediate') {
+    jobId = crontab.scheduleJob('* * * * *', pushNotificationsLib.send, [req.campaign], null, false);
+  } else { // scheduled jobs
+    jobId = crontab.scheduleJob(scheduler.getCrontabString(jsonObj), pushNotificationsLib.send, [req.campaign]);
+  }
+  campaignSchedule.jobId = jobId;
 
   campaignSchedule.save(function (err) {
     if (err) {
@@ -31,7 +48,20 @@ exports.save = function (req, res) {
         message: errorHandler.getErrorMessage(err)
       });
     } else {
-      res.json(campaignSchedule);
+      if (!req.campaign.deliverySchedule) {
+        req.campaign.deliverySchedule = campaignSchedule._id;
+        req.campaign.save(function(err) {
+          if (err) {
+            return res.status(400).send({
+              message: errorHandler.getErrorMessage(err)
+            });
+          } else {
+            res.json(campaignSchedule);
+          }
+        });
+      } else {
+        res.json(campaignSchedule);
+      }
     }
   });
 };
@@ -40,8 +70,18 @@ exports.save = function (req, res) {
  * Delete schedule associated to campaign
  */
 exports.delete = function (req, res) {
-  if (req.campaign.deliverySchedule) {
-    req.campaign.deliverySchedule.remove(function(err){
+  var campaignSchedule = req.campaign.deliverySchedule;
+  if (campaignSchedule) {
+    // unschedule if any job is scheduled
+    if (campaignSchedule.jobId) {
+      try {
+        crontab.cancelJob(campaignSchedule.jobId);
+      } catch(e) {
+        console.log(chalk.bold.red('Crontab: job id not found'));
+      }
+    }
+
+    campaignSchedule.remove(function(err){
       if (err) {
         return res.status(400).send({
           message: errorHandler.getErrorMessage(err)
