# modules/campaigns/server/models/campaignSchedule.server.model.js
@@ -37,12 +37,13 @@ var CampaignScheduleSchema = new Schema({
   lastSent: {
     type: Date
   },
-  nextSend: {
-    type: Date
-  },
   frequency: {
     type: String,
     enum: ['immediate', 'scheduled']
+  },
+  jobId: {
+    type: String,
+    default: ''
   },
   campaign: {
     type: Schema.ObjectId,
