# modules/mobile/server/routes/mobile.server.routes.js
@@ -4,7 +4,7 @@
  * Module dependencies.
  */
 var auth = require('../controllers/authentication.server.controller'),
-  gcm = require('../controllers/gcm.server.controller'),
+  appUserCtlr = require('../controllers/appUser.server.controller'),
   events = require('../controllers/events.server.controller');
 
 module.exports = function (app) {
@@ -12,9 +12,12 @@ module.exports = function (app) {
   app.route('/api/mobile/authenticate')
     .post(auth.authenticate);
 
-  app.route('/api/mobile/subscribe')
-    .post(auth.applicationByToken, gcm.register);
+  app.route('/api/mobile/user/:appUserId')
+    .post(auth.applicationByToken, appUserCtlr.update);
 
-  app.route('/api/mobile/track_event')
+  app.route('/api/mobile/user/:appUserId/track_event')
     .post(auth.applicationByToken, events.track);
+
+  // Finish by binding the application middleware
+  app.param('appUserId', appUserCtlr.appUserById);
 };
